--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -196,5 +196,7 @@
     <!-- Boolean indicating whether the HWC setColorTransform function can be performed efficiently
         in hardware. -->
     <bool name="config_setColorTransformAccelerated">true</bool>
-    
+
+    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
+    <integer name="config_screenRecorderMaxFramerate">90</integer>
 </resources>
