--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -10,10 +10,10 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds.  Do not translate. -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources
+    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Flag indicating whether we should enable the automatic brightness.
         Software implementation will be used if config_hardware_auto_brightness_available is not set -->
     <bool name="config_automatic_brightness_available">true</bool>
@@ -75,23 +75,23 @@
     </string-array>
     <!-- Default files to pin via Pinner Service -->
     <array name="config_defaultPinnerServiceFiles">
-    <item>/system/framework/arm64/boot-framework.oat</item>
-    <item>/system/framework/framework.jar</item>
-    <item>/system/framework/oat/arm64/services.odex</item>
-    <item>/system/framework/services.jar</item>
-    <item>/apex/com.android.art/javalib/core-oj.jar</item>
-    <item>/apex/com.android.art/javalib/core-libart.jar</item>
-    <item>/apex/com.android.media/javalib/updatable-media.jar</item>
-    <item>/system_ext/priv-app/SystemUI/SystemUI.apk</item>
-    <item>/system_ext/priv-app/SystemUI/oat/arm64/SystemUI.odex</item>
-    <item>/system/lib64/libsurfaceflinger.so</item>
-    <item>/system/lib64/libRScpp.so</item>
-    <item>/system/lib64/libRS.so</item>
-    <item>/system/lib64/libRS_internal.so</item>
-    <item>/system/lib64/libbcinfo.so</item>
-    <item>/system/lib64/libRSDriver.so</item>
-    <item>/system/lib64/libRSCpuRef.so</item>
-    <item>/system/lib64/libblas.so</item>
+        <item>/system/framework/arm64/boot-framework.oat</item>
+        <item>/system/framework/framework.jar</item>
+        <item>/system/framework/oat/arm64/services.odex</item>
+        <item>/system/framework/services.jar</item>
+        <item>/apex/com.android.art/javalib/core-oj.jar</item>
+        <item>/apex/com.android.art/javalib/core-libart.jar</item>
+        <item>/apex/com.android.media/javalib/updatable-media.jar</item>
+        <item>/system_ext/priv-app/SystemUI/SystemUI.apk</item>
+        <item>/system_ext/priv-app/SystemUI/oat/arm64/SystemUI.odex</item>
+        <item>/system/lib64/libsurfaceflinger.so</item>
+        <item>/system/lib64/libRScpp.so</item>
+        <item>/system/lib64/libRS.so</item>
+        <item>/system/lib64/libRS_internal.so</item>
+        <item>/system/lib64/libbcinfo.so</item>
+        <item>/system/lib64/libRSDriver.so</item>
+        <item>/system/lib64/libRSCpuRef.so</item>
+        <item>/system/lib64/libblas.so</item>
     </array>
     <!-- Indicate available ColorDisplayManager.COLOR_MODE_xxx. -->
     <integer-array name="config_availableColorModes">
@@ -103,7 +103,7 @@
         rat-name:rmem_min,rmem_def,rmem_max,wmem_min,wmem_def,wmem_max
         If no value is found for the rat-name in use, the system default will be applied.
     -->
-     <string-array name="config_mobile_tcp_buffers">
+    <string-array name="config_mobile_tcp_buffers">
         <item>5gnr:2097152,6291456,16777216,512000,2097152,8388608</item>
         <item>lte:2097152,4194304,8388608,262144,524288,1048576</item>
         <item>lte_ca:4096,6291456,12582912,4096,1048576,2097152</item>
@@ -116,7 +116,7 @@
         <item>gprs:4092,8760,11680,4096,8760,11680</item>
         <item>evdo:4094,87380,524288,4096,16384,262144</item>
     </string-array>
-     <!-- List of regexpressions describing the interface (if any) that represent tetherable
+    <!-- List of regexpressions describing the interface (if any) that represent tetherable
         bluetooth interfaces.  If the device doesn't want to support tethering over bluetooth this
         should be empty. -->
     <string-array name="config_tether_bluetooth_regexs">
@@ -188,17 +188,13 @@
         <item>0,1</item>
         <item>7,1</item>
     </string-array>
-
     <!-- Boolean indicating whether the HWC setColorTransform function can be performed efficiently
         in hardware. -->
     <bool name="config_setColorTransformAccelerated">true</bool>
-
     <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
     <integer name="config_screenRecorderMaxFramerate">90</integer>
-
     <!-- Whether device supports double tap to wake -->
     <bool name="config_supportDoubleTapWake">true</bool>
-
     <!-- Array of hysteresis constraint values for brightening, represented as tenths of a
         percent. The length of this array is assumed to be one greater than
         config_ambientThresholdLevels. The brightening threshold is calculated as
@@ -215,7 +211,6 @@
         <item>600</item>
         <item>1000</item>
     </integer-array>
-
     <!-- Array of hysteresis constraint values for darkening, represented as tenths of a
         percent. The length of this array is assumed to be one greater than
         config_ambientThresholdLevels. The darkening threshold is calculated as
@@ -232,7 +227,6 @@
         <item>500</item>
         <item>500</item>
     </integer-array>
-
     <!-- Array of ambient lux threshold values. This is used for determining hysteresis constraint
         values by calculating the index to use for lookup and then setting the constraint value
         to the corresponding value of the array. The new brightening hysteresis constraint value
@@ -252,7 +246,6 @@
         <item>2000</item>
         <item>4000</item>
     </integer-array>
-
     <!-- Array of desired screen brightness in nits corresponding to the lux values
         in the config_autoBrightnessLevels array. As with config_screenBrightnessMinimumNits and
         config_screenBrightnessMaximumNits, the display brightness is defined as the measured
@@ -290,7 +283,6 @@
         <item>248</item>
         <item>255</item>
     </integer-array>
-
     <!-- Array of light sensor lux values to define our levels for auto backlight brightness support.
         The N entries of this array define N + 1 control points as follows:
         (1-based arrays)
@@ -334,7 +326,6 @@
         <item>3500</item>
         <item>4000</item>
     </integer-array>
-
     <!-- Array of hysteresis constraint values for brightening, represented as tenths of a
         percent. The length of this array is assumed to be one greater than
         config_screenThresholdLevels. The brightening threshold is calculated as
@@ -344,7 +335,6 @@
     <integer-array name="config_screenBrighteningThresholds">
         <item>0</item>
     </integer-array>
-
     <!-- Array of hysteresis constraint values for darkening, represented as tenths of a
         percent. The length of this array is assumed to be one greater than
         config_screenThresholdLevels. The darkening threshold is calculated as
@@ -354,38 +344,30 @@
     <integer-array name="config_screenDarkeningThresholds">
         <item>0</item>
     </integer-array>
-
     <!-- For WPA3 SoftaAp -->
     <bool name="config_wifi_wap3_sap_mode_enabled">true</bool>
-
     <!-- Default screen brightness for VR setting. -->
     <integer name="config_screenBrightnessForVrSettingDefault">1376</integer>
     <item type="dimen" name="config_screenBrightnessSettingForVrDefaultFloat">-2.0</item>
-
     <!-- Minimum screen brightness setting allowed for VR. Device panels start increasing pulse
         width as brightness decreases below this theshold. -->
     <integer name="config_screenBrightnessForVrSettingMaximum">4095</integer>
     <item type="dimen" name="config_screenBrightnessSettingForVrMaximumFloat">-2.0</item>
-
     <!-- Maximum screen brightness setting allowed for VR. -->
     <integer name="config_screenBrightnessForVrSettingMinimum">1264</integer>
     <item type="dimen" name="config_screenBrightnessSettingForVrMinimumFloat">-2.0</item>
-
     <!-- The maximum range of gamma adjustment possible using the screen
         auto-brightness adjustment setting. -->
     <fraction name="config_autoBrightnessAdjustmentMaxGamma">100%</fraction>
-
-   <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
+    <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
         for debouncing the light sensor.  Different constants are used to debounce the light sensor
         when adapting to brighter or darker environments.  This parameter controls how quickly
         brightness changes occur in response to an observed change in light level that exceeds the
         hysteresis threshold. -->
     <integer name="config_autoBrightnessBrighteningLightDebounce">1000</integer>
     <integer name="config_autoBrightnessDarkeningLightDebounce">1000</integer>
-
     <!-- Fast brightness animation ramp rate in brightness units per second-->
     <integer translatable="false" name="config_brightness_ramp_rate_fast">308</integer>
-
     <!-- Slow brightness animation ramp rate in brightness units per second-->
     <integer translatable="false" name="config_brightness_ramp_rate_slow">246</integer>
     <!-- Screen brightness used to dim the screen when the user activity
@@ -393,28 +375,22 @@
         that can be set by the user. -->
     <integer name="config_screenBrightnessDim">10</integer>
     <item type="dimen" name="config_screenBrightnessDimFloat">-2.0</item>
-
     <!-- Screen brightness used to dim the screen while dozing in a very low power state.
         May be less than the minimum allowed brightness setting
         that can be set by the user. -->
     <integer name="config_screenBrightnessDoze">1</integer>
     <item type="dimen" name="config_screenBrightnessDozeFloat">-2.0</item>
-
     <!-- Default screen brightness setting.
         Must be in the range specified by minimum and maximum. -->
     <integer name="config_screenBrightnessSettingDefault">102</integer>
-
     <!-- Maximum screen brightness allowed by the power manager.
          The user is forbidden from setting the brightness above this level. -->
     <integer name="config_screenBrightnessSettingMaximum">255</integer>
-
     <!-- Minimum screen brightness setting allowed by the power manager.
         The user is forbidden from setting the brightness below this level. -->
     <integer name="config_screenBrightnessSettingMinimum">2</integer>
-
     <!-- Shutdown if the battery temperature exceeds (this value * 0.1) Celsius. -->
     <integer name="config_shutdownBatteryTemperature">600</integer>
-
     <!--The bounding path of the cutout region of the main built-in display.
         Must either be empty if there is no cutout region, or a string that is parsable by
         {@link android.util.PathParser}.
@@ -433,25 +409,21 @@
         @see https://www.w3.org/TR/SVG/paths.html#PathData
          -->
     <string name="config_mainBuiltInDisplayCutout">M 0,0 H -36 V 91 H 36 V 0 H 0 Z</string>
-
     <!-- Setting this true forces the headset jack switches to use the/dev/input/event subsystem
                   rather than the uevent framework. -->
     <bool name="config_useDevInputEventForAudioJack">true</bool>
-
     <!-- Vibrator pattern for feedback about a long screen/key press -->
     <integer-array name="config_longPressVibePattern">
         <item>0</item>
         <item>7</item>
         <item>10</item>
     </integer-array>
-
     <!-- Vibrator pattern for feedback about touching a virtual key -->
     <integer-array name="config_virtualKeyVibePattern">
         <item>0</item>
         <item>5</item>
         <item>10</item>
     </integer-array>
-
     <!-- Vibrator pattern for a very short but reliable vibration for soft keyboard tap -->
     <integer-array name="config_keyboardTapVibePattern">
         <item>10</item>
